fix spacing css

--- a/client/app/main/lists.scss
+++ b/client/app/main/lists.scss
@@ -64,7 +64,7 @@
         margin-left: 90px;
       }
       @media (min-width: $screen-sm) {
-        margin-left: 100px;
+        margin-left: 130px;
       }
     }
   }
